--- a/style.css
+++ b/style.css
@@ -249,6 +249,20 @@ h6{
     padding-bottom: 30px;
 }
 
+#final{
+    padding-top: 50px;
+    background-color: #FFF9EE;
+}
+
+#vizforfinal{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+}
+
 #location {
     justify-content: center;
     align-content: center;
@@ -271,7 +285,6 @@ h6{
     justify-content: center;
     padding-top: 25px;
     align-content: center;
-    margin-bottom: 60px;
     padding-bottom: 50px;
 }
 
