--- a/style.css
+++ b/style.css
@@ -449,6 +449,19 @@ text.s-title {
     padding-top: 5px;
 }
 
+#treemap{
+    padding-left: 250px;
+    padding-right: 250px;
+}
+
+#incomeinequality{
+    padding-left: 350px;
+    padding-right: 350px;
+    padding-bottom: 30px;
+    padding-top: 5px;
+    scale: 1, 1.25;
+}
+
 @media (min-width: 1200px)
 .container {
     max-width: 1140px;
