--- a/style.css
+++ b/style.css
@@ -7,11 +7,28 @@
 html{
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
-}
+    display: table;
+    margin: auto; }
 
 a{
     text-decoration: none;
 }
+/* from Interactive and reusable d3.treemap */
+/* http://bl.ocks.org/annaghi/5d24b37ebe077d4e919f */
+
+  #vis {
+    width: 960px;
+    height: 500px; 
+    position: center;}
+
+  .cell text {
+    cursor: move;
+    font: 10px sans-serif;
+    text-anchor: middle; }
+
+  .cell rect {  
+    stroke: #fff; }
+/* end of interactive and reusable d3.treemap */
 
 body {
     margin: 0;
@@ -49,8 +66,8 @@ p-v{
 }
 
 h1 {
-    font-size: 55px;
-    line-height: 75px;
+    font-size: 70px;
+    line-height: 100px;
     font-weight: bold;
     color: #002949;
     max-width: 450px;
@@ -59,13 +76,18 @@ h1 {
 }
 
 h1-v {
-    font-size: 55px;
-    line-height: 75px;
+    font-size: 90px;
+    line-height: 100px;
     font-weight: bold;
     color: #CA8851;
     max-width: 530px;
     padding-bottom: 15px;
     position: left;
+}
+
+h1-v:hover {
+    background-color: #CA8851;
+    color: #FFFFFF;
 }
 
 h2 {
@@ -98,10 +120,11 @@ h4 {
     font-size: 16px;
     color: #333333;
     font-weight: lighter;
-    max-width: 600px;
+    width: 100%;
+    /* max-width: 1092px; */
     padding-top: 3px;
     padding-bottom: 3px;
-    transform: translate(70%, -50%);
+    /* transform: translate(-10%, 100%); */
     text-align: center;
     justify-content: center;
 }
@@ -200,7 +223,7 @@ h6{
 }
 
 .container {
-    min-height: 100vh;
+    min-height: 90vh;
     width: 100%;
     display: flex;
     align-items: left;
@@ -226,12 +249,9 @@ h6{
     border-radius: 10px;
     text-transform: uppercase;
     margin-top: 25px;
-    transition: .3s ease background-color;
+    transition: 5s ease background-color;
 }
 
-#hero .cta:hover {
-    background-color: #A85F22;
-}
 
 .cta {
     scroll-behavior: smooth;
@@ -240,6 +260,16 @@ h6{
 #who {
     padding-top: 50px;
     background-color: #F9E7E6;
+    justify-content: center;
+    align-content: center;
+    max-height: 1000px;
+    padding-bottom: 30px;
+}
+
+
+#who2 {
+    padding-top: 50px;
+    background-color: #F9E0E6;
     justify-content: center;
     align-content: center;
     max-height: 1000px;
@@ -440,6 +470,10 @@ text.s-title {
 #observablehq-2a621b2f{
     padding-left: 100px;
     padding-right: 150px;
+    height: 500px;
+    width: 50%;
+    position: center;
+    margin: 0 auto;
 }
 
 #observablehq-174830da{
@@ -450,8 +484,11 @@ text.s-title {
 }
 
 #treemap{
-    padding-left: 250px;
-    padding-right: 250px;
+    /* padding-left: 250px;
+    padding-right: 250px; */
+    margin: 0 auto;
+    position: center;
+    /* left: 30%; */
 }
 
 #incomeinequality{
