fixed the timeline data

--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ h6{
 #racebar{
     padding-top: 50px;
     background-color: #FFF9EE;
-    padding-bottom: 350px;
+    padding-bottom: 80vh;
 }
 .race-container{
 
