--- a/sass/simpletimeline.scss
+++ b/sass/simpletimeline.scss
@@ -133,19 +133,20 @@ html {
     position: relative;
     border: 4px solid #CA8851;
     @media(max-width: 800px) {
-      background-color: #000;
+      background-color: #D49151;
       border: 4px solid #fff;
 
     }
   }
   &:hover {
     .dot {
-      background-color: #000;
+      background-color: #D49151;
       border-color: #fff;
     }
     .data {
       visibility: visible;
-      opacity: 1;
+      opacity: 0.5;
+      background-color: #D49151;
     }
   }
 }
@@ -233,7 +234,7 @@ html {
     }
   }
   .dot {
-    background-color: #000;
+    background-color: #D49151;
     border: 4px solid #fff;
   }
 
