--- a/descstyle.css
+++ b/descstyle.css
@@ -1,13 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Sofia|Lato|Lobster|Poppins|Pacifico|Anton|Kaushan+Script|Roboto|Open+Sans:300,400,600,700");
-#descsection {
-  background: #FBF3E1;
-  font-family: 'Poppins', sans-serif;
-}
 body {
     background: #FBF3E1;
     font-family: 'Poppins', sans-serif;
   }
-.page {
+  #demopage{
   width: 100vw;
   height: 100vh;
   min-height: 700px;
@@ -24,7 +20,7 @@ body {
   max-width: 800px;
   margin: 0 auto;
   box-sizing: border-box;
-  padding: 50px 0 100px;
+  padding: 30px 0 3vh;
   list-style-type: none;
 }
 
@@ -69,7 +65,7 @@ body {
   position: relative;
   z-index: 1;
   width: 60vw;
-  height: 50vh;
+  height: 30vh;
   margin: 0 auto;
 }
 
@@ -80,21 +76,23 @@ body {
   background-color: white;
   box-shadow: 9px 11px 3px 0px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
-  padding: 40px;
+  padding: 10px;
   transition: transform 0.3s, opacity 0.2s;
+  text-align: Center;
+
 }
 .card p{
+  padding-top:5vh;
   font-family: 'Roboto', sans-serif;
   font-size: 1.3rem;
   font-weight: 400;
   line-height: 1.5;
   color: #423E37;
+  text-align: left;
 }
-.card .card-title{
+.card-title{
   font-family: 'Anton', sans-serif;
   font-weight: 400;
-  margin: 0;
-  text-align: center;
   font-size: 4rem;
   line-height: 1;
   color: #CA8851;
@@ -102,6 +100,7 @@ body {
   display: inline-block;
   vertical-align: middle;
   line-height: normal;
+
 }
 .card.hidden {
   z-index: 100;
