--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 p {
-    color: #C9C9C9;
+    color: #777;
     font-size: 16px;
     font-weight: 400px;
     max-width: 1000px;
@@ -50,7 +50,7 @@ p {
     margin-right: auto;
     position: center;
     text-align: center;
-    margin-top: -35px;
+    /* margin-top: -35px; */
 }
 
 p-v{
@@ -64,7 +64,16 @@ p-v{
     position: center;
     text-align: center;
 }
-
+.sectionfootnote {
+    color: #777;
+    font-size: 0.8rem;
+    font-weight: 500px;
+    line-height: 28px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: inherit;
+    padding-top: 5vh;
+}
 h2 {
     font-size: 38px;
     color: #FBF3E2;
@@ -90,7 +99,7 @@ h4 {
     font-size: 2vh;
     color: #333333;
     font-weight: lighter;
-    width: 50%;
+    /* width: 50%; */
     /* max-width: 1092px; */
     padding-top: 3px;
     padding-bottom: 3px;
@@ -100,7 +109,20 @@ h4 {
     text-align: left;
     justify-content: center;
 }
+.pageh4 {
+    font-size: 2vh;
+    color: #333333;
+    font-weight: lighter;
+    /* max-width: 1092px; */
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin: auto;
+    line-height:3.5vh;
+    /* transform: translate(-10%, 100%); */
+    text-align: center;
+    justify-content: center;
 
+}
 h5 {
     font-size: 12px;
     color: #666666;
@@ -206,24 +228,52 @@ h6{
 /* who are they */
 
 #who {
-    padding-top: 50px;
+    padding-top: 15vh;
     background-color: #F9E7E6;
     max-height: 1200px;
+    position:relative;
+    height:100vh;
 }
 
+#whodesc {
+   position:relative;
+   margin-left:0;
+   padding-right:5vw;
+    width: 45%;
+    float:right; 
+    margin-top:10vh;
+    text-align:left;
+}
+#flourish-map{
+    width: 50%;
+    float:left; 
+}
 /* demopage */
 
 #demopage {
     max-height: none;
     background: #FBF3E1;
+    height:110vh;
 }
 
 #matchgame {
-    background: #FBF3E1;
+    background: #FBF5EE;
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
-    height:90vh;
+    height:100vh;
   }
+
+
+.shadowhr {
+    display: block; 
+    content: ""; 
+    height: 30px; 
+    margin-top: -31px; 
+    border-style: solid; 
+    border-color: #8c8b8b; 
+    border-width: 0 0 1px 0; 
+    border-radius: 20px; 
+}
 /* Where are they */
 #location {
     background-color: #FBF3E1;
@@ -309,3 +359,39 @@ h6{
     padding-top: 25px;
     min-height: 0;
 }
+
+
+.hr-text {
+    line-height: 1em;
+    position: relative;
+    outline: 0;
+    border: 0;
+    color: black;
+    text-align: center;
+    height: 1.5em;
+    opacity: .51;
+    background: transparent;
+    margin-top:3vh;
+    /* background: #FBF3E1; */
+  }
+  .hr-text:before {
+    content: '';
+    background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(#818078), to(transparent));
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+  }
+  .hr-text:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+    padding: 0 .5em;
+    line-height: 1.5em;
+    color: #818078;
+    background-color: #fcfcfa;
+  }
+  
