--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ a {
     align-content: center;
 }
 
+.tableauPlaceholder {
+    margin: 0 auto;
+}
+
 body {
     width: 100vw;
     font-weight: 400;
@@ -64,6 +68,7 @@ p-v{
     position: center;
     text-align: center;
 }
+
 .sectionfootnote {
     color: #777;
     font-size: 0.8rem;
@@ -74,6 +79,7 @@ p-v{
     text-align: inherit;
     padding-top: 5vh;
 }
+
 h2 {
     font-size: 38px;
     color: #FBF3E2;
@@ -109,6 +115,7 @@ h4 {
     text-align: left;
     justify-content: center;
 }
+
 .pageh4 {
     font-size: 2vh;
     color: #333333;
@@ -171,11 +178,11 @@ h6{
     vertical-align: text-top;
     list-style: none;
     text-align: center;
-    width: 50%;
+    width: 60%;
 }
 
 .nav-list>li {
-    width: 5vw;
+    margin: 0 auto;
     font-weight: regular;
 }
 
@@ -231,22 +238,28 @@ h6{
     padding-top: 15vh;
     background-color: #F9E7E6;
     max-height: 1200px;
-    position:relative;
-    height:110vh;
+    /* position:relative; */
+    height: 110vh;
 }
 
 #whodesc {
-   position:relative;
-   margin-left:0;
-   padding-right:5vw;
+    position:relative;
+    margin-left:0;
+    padding-right:5vw;
     width: 45%;
     float:right; 
     margin-top:10vh;
     text-align:left;
 }
+
+#whodesc>h2-v {
+    text-align: left
+}
+
 #flourish-map{
     width: 50%;
-    float:left; 
+    padding-bottom: 0
+    /* float:left;  */
 }
 /* demopage */
 
@@ -261,7 +274,7 @@ h6{
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     height:110vh;
-  }
+}
 
 
 .shadowhr {
@@ -274,28 +287,17 @@ h6{
     border-width: 0 0 1px 0; 
     border-radius: 20px; 
 }
+
 /* Where are they */
 #location {
     background-color: #FBF3E1;
-    max-height: 1200px;
 }
 
-#location iframe {
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
+#vizforlocation {
+    margin: 0 auto;
 }
 
 /* income inequality */
-.cell text {
-    cursor: move;
-    font: 10px sans-serif;
-    text-anchor: middle;
-}
-    
-.cell rect {  
-    stroke: #fff; 
-}
 
 #income {
     max-height: none;
@@ -307,15 +309,14 @@ h6{
     display: block;
     margin: 25px auto 0;
     /* max-height: 1300px;*/
-    width: 80vw;
-    max-width: 1100px;
+    /* width: 80vw; */
+    max-width: 1300px;
 }
 
 #vizforincome {
     display: block;
     margin: 0 auto;
-    width: 80vw;
-    max-width: 1100px;
+    max-width: 1000px;
 }
 
 /* education gap */
@@ -328,14 +329,16 @@ h6{
 #vizforedu {
     display: block;
     margin: 0 auto;
-    width: 40vw;
-    max-width: 700px;
+    width: 50vw;
+    max-width: 900px;
+    padding-bottom: 0;
 }
 
 /* population change*/
 
 #population{
     max-height: none;
+    padding-bottom: 50px;
     background-color: #FFF9EE;
 }
 
@@ -345,6 +348,10 @@ h6{
 #final {
     background-color: #FFF9EE;
     min-height: 0;
+}
+
+#final>h4{
+    margin-left: 5vw
 }
 
 #vizforfinal {
